--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.security.oauth2.client.registration.cognito.clientId=3gc0rlb4vgllbonqnif5i05764
+spring.security.oauth2.client.registration.cognito.clientSecret=o6t6v7j0oebt3elkalt1l9qd58r33a2shjg92t2vjjivr6ij8fg
+spring.security.oauth2.client.registration.cognito.scope=openid
+spring.security.oauth2.client.registration.cognito.redirectUri=http://localhost:8080/login/oauth2/code/cognito
+spring.security.oauth2.client.registration.cognito.clientName=hanahana
+spring.security.oauth2.client.provider.cognito.issuerUri=https://cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_3Xg4pw2M1
+spring.security.oauth2.client.provider.cognito.user-name-attribute=cognito:username
 
