logout success handler 소스 추가

--- a/src/main/resources/aws.properties
+++ b/src/main/resources/aws.properties
@@ -2,3 +2,6 @@ aws.accessKey=AKIATCJ5BWBYGRLDX3EY
 aws.secretKey=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
 region=ap-northeast-2
 aws.dynamodb.endpoint=http://localhost:8000/
+
+cognito.clientId=3gc0rlb4vgllbonqnif5i05764
+cognito.logoutUrl=http://localhost:8080/
